@@ -1,5 +1,12 @@
 2003-04-03  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extractor.h:
+	* src/sj-extractor.c:
+	GObjectify the GStreamer code. Hopefully I'll remove
+	sj-gstreamer.[ch] later today.
+
+2003-04-03  Ross Burton  <ross@burtonini.com>
+
 	* tests/glade-test.c (mkdirs): Reimplemented mkdirs(). Still
 	sucks, but at least works.
 
